--- a/osmosfeed.yaml
+++ b/osmosfeed.yaml
@@ -3,7 +3,10 @@
 # https://github.com/osmoscraft/osmosfeed/blob/master/docs/osmosfeed-yaml-reference.md
 #########################
 
-# cacheUrl: https://GITHUB_USERNAME.github.io/REPO_NAME/cache.json
+cacheUrl: https://KiarashS.github.io/reader/cache.json
+siteTitle: "My RSS Reader::Kiarash Soleimanzadeh"
+timezone: Iran
+cacheMaxDays: 30
 sources:
   - href: https://github.com/osmoscraft/osmosfeed/releases.atom # Get new feature announcement via this feed
   - href: https://css-tricks.com/feed/
