--- a/osmosfeed.yaml
+++ b/osmosfeed.yaml
@@ -9,6 +9,8 @@ timezone: Iran
 cacheMaxDays: 30
 sources:
   - href: https://github.com/osmoscraft/osmosfeed/releases.atom # Get new feature announcement via this feed
-  - href: https://css-tricks.com/feed/
-  - href: https://www.smashingmagazine.com/feed/
-  - href: https://www.freecodecamp.org/news/rss/
+  - href: https://towardsdatascience.com/feed
+  - href: https://machinelearningmastery.com/blog/feed/
+  - href: https://medium.com/feed/tag/machine-learning
+  - href: https://blog.ml.cmu.edu/feed/
+  - href: https://machinelearning.apple.com/rss.xml
