--- a/osmosfeed.yaml
+++ b/osmosfeed.yaml
@@ -13,3 +13,74 @@ sources:
   - href: https://machinelearningmastery.com/blog/feed/
   - href: https://blog.ml.cmu.edu/feed/
   - href: https://machinelearning.apple.com/rss.xml
+  - href: https://blog.research.google/atom.xml
+  - href: https://fastml.com/atom.xml
+  - href: http://fastml.com/atom.xml
+  - href: http://brenocon.com/blog/feed/
+  - href: http://allendowney.blogspot.com/feeds/posts/default
+  - href: http://blog.shakirm.com/feed/
+  - href: http://blog.echen.me/feeds/all.atom.xml
+  - href: http://www.wildml.com/feed/
+  - href: https://iamtrask.github.io/feed.xml
+  - href: https://petewarden.com/feed/
+  - href: https://medium.com/feed/@ageitgey
+  - href: https://adeshpande3.github.io/feed.xml
+  - href: https://medium.com/feed/@karpathy
+  - href: https://blog.wikimedia.org/c/research-2/wikimedia-research-newsletter/feed/
+  - href: https://explosion.ai/feed.xml
+  - href: https://justindomke.wordpress.com/feed/
+  - href: https://www.jowanza.com/blog?format=rss
+  - href: https://distill.pub/rss.xml
+  - href: https://nlpers.blogspot.com/feeds/posts/default
+  - href: https://feeds.feedburner.com/MachineLearningMastery
+  - href: https://www.kdnuggets.com/feed
+  - href: https://yanirseroussi.com/feed/
+  - href: https://www.nowpublishers.com/feed/MAL
+  - href: https://lilianweng.github.io/lil-log/feed.xml
+  - href: https://www.reddit.com/r/LanguageTechnology.rss
+  - href: https://blog.fastforwardlabs.com/feed.xml
+  - href: https://statmodeling.stat.columbia.edu/feed/
+  - href: https://www.johndcook.com/blog/feed/
+  - href: https://pythonspeed.com/atom.xml
+  - href: https://timdettmers.com/feed/
+  - href: https://vicki.substack.com/feed/
+  - href: https://www.reddit.com/r/learnmachinelearning.rss
+  - href: https://matthewmcateer.me/rss.xml
+  - href: https://www.countbayesie.com/blog?format=rss
+  - href: http://roundup.fishtownanalytics.com/?format=rss
+  - href: https://hunch.net/?feed=rss2
+  - href: https://dataelixir.com/issues.rss
+  - href: https://algorithmia.com/blog/feed
+  - href: https://www.fharrell.com/index.xml
+  - href: https://old.reddit.com/r/MachineLearning/.rss
+  - href: https://www.reddit.com/r/MLQuestions.rss
+  - href: https://datascienceleadership.substack.com/feed/
+  - href: https://gradientflow.substack.com/feed/
+  - href: https://bastiane.substack.com/feed/
+  - href: https://fairlydeep.substack.com/feed/
+  - href: https://pragmaticml.substack.com/feed/
+  - href: https://mlinproduction.com/feed/
+  - href: https://medium.com/feed/tag/akshaj-wields-pytorch
+  - href: https://medium.com/feed/tag/deep-learning
+  - href: https://medium.com/feed/pytorch
+  - href: https://conor.substack.com/feed/
+  - href: https://cds.nyu.edu/feed/
+  - href: https://www.pyimagesearch.com/feed/
+  - href: https://anotherdatum.com/feeds/all.atom.xml
+  - href: https://blog.thedataincubator.com/feed/
+  - href: https://uwekorn.com/rss.xml
+  - href: https://roberttlange.github.io/feed.xml
+  - href: https://betanalpha.github.io/feed.xml
+  - href: https://roycoding.com/blog/rss.xml
+  - href: http://www.databozo.com/posts.atom
+  - href: http://www.gallamine.com/feeds/posts/default
+  - href: https://www.tmarthal.com/feeds/posts/default
+  - href: https://randyzwitch.com/feed.xml
+  - href: https://tdhopper.com/blog/?format=rss
+  - href: https://jbendeaton.com/feed.xml
+  - href: https://www.kill-the-newsletter.com/feeds/clgdkag7vq1e4pl4shei.xml
+  - href: https://www.kill-the-newsletter.com/feeds/nr3re6vid9thykg5f0z7.xml
+  - href: https://www.kill-the-newsletter.com/feeds/qb47kyhrjqkkbll8gbiq.xml
+  - href: https://medium.com/feed/pursuitnotes/tagged/challenge
+  - href: https://machinelearningmastery.com/feed/
+  - href: https://gradientscience.org/feed.xml
