--- a/.github/workflows/update-feed.yaml
+++ b/.github/workflows/update-feed.yaml
@@ -27,5 +27,6 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3.9.3
         with:
+          node-version: "latest"
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
