--- a/osmosfeed.yaml
+++ b/osmosfeed.yaml
@@ -19,3 +19,4 @@ sources:
   - href: https://medium.com/feed/kaggle-blog
   - href: https://huggingface.co/blog/feed.xml
   - href: https://lilianweng.github.io/index.xml
+  - href: https://www.microsoft.com/en-us/research/feed/
