--- a/osmosfeed.yaml
+++ b/osmosfeed.yaml
@@ -20,3 +20,5 @@ sources:
   - href: https://huggingface.co/blog/feed.xml
   - href: https://lilianweng.github.io/index.xml
   - href: https://www.microsoft.com/en-us/research/feed/
+  - href: https://ai.stanford.edu/blog/feed.xml
+  - href: https://www.ruder.io/rss/
