--- a/osmosfeed.yaml
+++ b/osmosfeed.yaml
@@ -22,3 +22,4 @@ sources:
   - href: https://www.microsoft.com/en-us/research/feed/
   - href: https://ai.stanford.edu/blog/feed.xml
   - href: https://www.ruder.io/rss/
+  - href: https://bair.berkeley.edu/blog/feed.xml
