--- a/osmosfeed.yaml
+++ b/osmosfeed.yaml
@@ -23,3 +23,4 @@ sources:
   - href: https://ai.stanford.edu/blog/feed.xml
   - href: https://www.ruder.io/rss/
   - href: https://bair.berkeley.edu/blog/feed.xml
+  - href: http://setosa.io/blog/feed.xml
