--- a/osmosfeed.yaml
+++ b/osmosfeed.yaml
@@ -24,3 +24,10 @@ sources:
   - href: https://www.ruder.io/rss/
   - href: https://bair.berkeley.edu/blog/feed.xml
   - href: http://setosa.io/blog/feed.xml
+  - href: https://medium.com/feed/huggingface
+  - href: https://amitness.com/feed.xml
+  - href: https://distill.pub/rss.xml
+  - href: https://fennel.ai/blog/rss/
+  - href: https://www.freecodecamp.org/news/tag/machine-learning/rss
+  - href: https://www.freecodecamp.org/news/tag/deep-learning/rss
+  - href: https://colah.github.io/rss.xml
