--- a/osmosfeed.yaml
+++ b/osmosfeed.yaml
@@ -31,3 +31,6 @@ sources:
   - href: https://www.freecodecamp.org/news/tag/machine-learning/rss
   - href: https://www.freecodecamp.org/news/tag/deep-learning/rss
   - href: https://colah.github.io/rss.xml
+  - href: https://www.nasa.gov/feeds/podcasts/houston-we-have-a-podcast
+  - href: https://www.eye-on.ai/ai-articles?format=rss
+  - href: https://www.scientificamerican.com/platform/syndication/rss/
