--- a/osmosfeed.yaml
+++ b/osmosfeed.yaml
@@ -33,3 +33,4 @@ sources:
   - href: https://colah.github.io/rss.xml
   - href: https://www.nasa.gov/feeds/podcasts/houston-we-have-a-podcast
   - href: https://www.eye-on.ai/ai-articles?format=rss
+  - href: https://bleedingedge.ai/rss/feed.xml
