--- a/osmosfeed.yaml
+++ b/osmosfeed.yaml
@@ -35,4 +35,10 @@ sources:
   - href: https://www.eye-on.ai/ai-articles?format=rss
   - href: https://bleedingedge.ai/rss/feed.xml
   - href: https://erogol.com/atom.xml
-  
+  - href: https://learnopencv.com/feed/
+  - href: https://imerit.net/feed/
+  - href: https://www.analyticsvidhya.com/feed/
+  - href: https://blog.paperspace.com/rss/
+  - href: https://www.clearview-imaging.com/en/blog/rss.xml
+  - href: https://www.rsipvision.com/feed/
+  - href: https://www.rsipvision.com/rsip-vision-learns/feed/
