--- a/osmosfeed.yaml
+++ b/osmosfeed.yaml
@@ -42,3 +42,5 @@ sources:
   - href: https://www.clearview-imaging.com/en/blog/rss.xml
   - href: https://www.rsipvision.com/feed/
   - href: https://www.rsipvision.com/rsip-vision-learns/feed/
+  - href: https://petolau.github.io/feed.xml
+  - href: https://lmc2179.github.io/feed.xml
