--- a/osmosfeed.yaml
+++ b/osmosfeed.yaml
@@ -44,3 +44,6 @@ sources:
   - href: https://www.rsipvision.com/rsip-vision-learns/feed/
   - href: https://petolau.github.io/feed.xml
   - href: https://lmc2179.github.io/feed.xml
+  - href: https://openai.com/news/rss.xml
+  - href: https://www.interconnects.ai/feed
+  - href: https://www.alignmentforum.org/feed.xml
