--- a/osmosfeed.yaml
+++ b/osmosfeed.yaml
@@ -12,7 +12,7 @@ sources:
   - href: https://towardsdatascience.com/feed
   - href: https://machinelearningmastery.com/blog/feed/
   - href: https://blog.ml.cmu.edu/feed/
-  - href: https://machinelearning.apple.com/rss.xml
+#  - href: https://machinelearning.apple.com/rss.xml
   - href: https://blog.research.google/atom.xml
   - href: https://fastml.com/atom.xml
   - href: https://adeshpande3.github.io/feed.xml
